--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,8 @@
 		"stop_token": "cpp",
 		"streambuf": "cpp",
 		"thread": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"codecvt": "cpp",
+		"future": "cpp"
 	}
 }
