Remove path input for cmd line argument

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,10 @@ endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(AsciiVideoPlayer VERSION 1.2 LANGUAGES CXX)
 add_executable(AsciiVideoPlayer ./src/main.cpp)
